# pandoc-latex-tip

./: .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  README.md  download.py  pandoc_latex_tip.py  pyproject.toml  setup.cfg  setup.py  tox.ini  whitelist.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  index.rst  requirements.txt  usage.rst
docs/images/: pandoc-latex-tip-sample.txt  pandoc-latex-tip-standard.txt
pandoc_latex_tip/: __init__.py  _app.py  _main.py
src/pandoc_latex_tip/: __init__.py  _main.py
tests/: test_tip.py
