[build-system]
    requires = ["poetry-core>=1.2", "packaging>=23.1"]
    build-backend = "poetry.core.masonry.api"

[tool.poetry]
    name = "pandoc-latex-tip"
    version = "2.3.0.0"
    description="A pandoc filter for adding beamer block on specific div"
    authors = ["Christophe Demko <chdemko@gmail.com>"]
    license = "BSD-3-Clause"
    readme = "README.md"
    homepage="https://github.com/chdemko/pandoc-latex-tip"
    keywords=["pandoc", "filters", "latex", "tip", "Font-Awesome", "icon"]
    # See https://pypi.python.org/pypi?%3Aaction=list_classifiers
    classifiers=[
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 5 - Production/Stable",
        # Specify the OS
        "Operating System :: OS Independent",
        # Indicate who your project is intended for
        "Environment :: Console",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Build Tools",
        "Topic :: Software Development :: Documentation",
        "Topic :: Text Processing :: Filters",
        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        # Natural language used
        "Natural Language :: English",
    ]
    packages = [{include = "pandoc_latex_tip.py"}]

[tool.poetry.dependencies]
    python = "^3.9"
    panflute = "^2.3.0"
    platformdirs = "^3.6.0"
    icon-font-to-png = "^0.4.1"
    pillow = "^9.5.0"
    packaging = "^23.1"

[tool.poetry.group.dev.dependencies]
    # download files
    requests = "^2.31.0"

    # test
    tox = "^4.6.2"

    # Formatter
    black = "^23.3.0"

    # Tests
    pytest = "^7.3.2"
    pytest-cov = "^4.1.0"

    # Style checkers
    doc8 = "^0.11.2"
    mypy = "^1.3.0"
    flake8 = "^6.0.0"
    flake8-annotations-complexity = "^0.0.7"
    flake8-black = "^0.3.6"
    flake8-blind-except = "^0.2.1"
    flake8-bugbear = "^23.6.5"
    flake8-builtins = "^2.1.0"
    flake8-cognitive-complexity = "^0.1.0"
    flake8-comprehensions = "^3.13.0"
    flake8-docstrings = "^1.7.0"
    flake8-expression-complexity = "^0.0.11"
    flake8-fixme = "^1.1.1"
    flake8-functions = "^0.0.7"
    flake8-import-order = "^0.18.2"
    flake8-mypy = "^17.8.0"
    flake8-pyi = "^23.5.0"
    flake8-pydocstyle = "^0.2.2"
    flake8-return = "^1.2.0"
    flake8-simplify = "^0.19.3"
    flake8-spellcheck = "^0.28.0"
    flake8-use-fstring = "^1.4"
    flake8-variables-names = "^0.0.5"
    pep8-naming = "^0.13.3"
    pylint = {version = "^2.17.4", python = ">=3.9"}
    ruff = "^0.0.254"
    darglint = "^1.8.1"
    teyit = {version = "^0.4.3", python = ">=3.9"}
    slotscheck = "^0.16.5"
    refurb = {version = "^1.16.0", python = ">=3.10"}
    
[tool.poetry.scripts]
    pandoc-latex-tip = "pandoc_latex_tip:main"

[tool.blix.data]
    data_files = [
        { destination = "share/pandoc_latex_tip/fontawesome/4.7/", from = [
            "share/pandoc_latex_tip/fontawesome/4.7/font-awesome.css",
            "share/pandoc_latex_tip/fontawesome/4.7/fontawesome-webfont.ttf"
        ] },
        { destination = "share/pandoc_latex_tip/fontawesome/5.x/", from = [
            "share/pandoc_latex_tip/fontawesome/5.x/fa-brands-400.ttf",
            "share/pandoc_latex_tip/fontawesome/5.x/fa-regular-400.ttf",
            "share/pandoc_latex_tip/fontawesome/5.x/fa-solid-900.ttf",
            "share/pandoc_latex_tip/fontawesome/5.x/fontawesome.css"
        ] },
        { destination = "share/pandoc_latex_tip/glyphicons/3.3/", from = [
            "share/pandoc_latex_tip/glyphicons/3.3/bootstrap.css",
            "share/pandoc_latex_tip/glyphicons/3.3/bootstrap-modified.css",
            "share/pandoc_latex_tip/glyphicons/3.3/glyphicons-halflings-regular.ttf"
        ] },
        { destination = "share/pandoc_latex_tip/materialdesign/3.x/", from = [
            "share/pandoc_latex_tip/materialdesign/3.x/materialdesignicons.css",
            "share/pandoc_latex_tip/materialdesign/3.x/materialdesignicons-webfont.ttf"
        ] }
    ]

